# beergame

./: .gitignore  README.md  pyproject.toml  readme_coorperate.md
cfg/: double_dqn.yaml  dqn.yaml  high_dim_double_dqn.yaml  high_dim_dqn.yaml  high_dim_ppo.yaml  ppo.yaml
coursebeergame/: course_dqn_example.py
paper/beergame_report/: report.tex  report_zh.tex
refer/: requirement.md
scripts/: plot_results.py  run_controlled_high_dim_experiments.py  train_config.py  train_double_dqn.py  train_dqn.py  train_high_dim_double_dqn.py  train_high_dim_dqn.py  train_high_dim_ppo.py  train_ppo.py
src/beergame/: __init__.py  course.py  course_dqn_example.py
src/beergame/model/: TODO.md  __init__.py
src/beergame/policy/: __init__.py  base_stock.py  dqn.py  experiment.py  high_dim.py  high_dim_experiment.py  ppo.py  ppo_experiment.py  random_policy.py  runner.py
src/beergame/policy/agents/: __init__.py  double_dqn.py  dqn.py  high_dim.py
src/beergame/policy/double_dqn/: __init__.py  double_dqn.py
src/beergame/policy/dqn/: TODO.md
src/beergame/policy/heuristic/: TODO.md  __init__.py
src/beergame/policy/improved/: TODO.md  __init__.py
src/beergame/policy/multi_agent/: TODO.md  __init__.py
src/beergame/sim/: __init__.py  env.py
src/beergame/sim/scenarios/: TODO.md  __init__.py
