[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beergame"
version = "0.0.0"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "hydra-core", 
    "scipy",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["beergame*"]
