[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beergame"
version = "0.0"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "hydra-core", 
    "scipy",
    "tqdm",
    "pygments>=2.4.0",
    "exceptiongroup"

]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["beergame*"]
